# fractal_renderer

./: Cargo.toml  README.md  build.rs
assets/shaders/: mandelbrot.frag  mandelbrot.vert
src/: application.rs  main.rs  resources.rs
src/renderer/: fractal_renderer.rs  mandelbrot.rs  mod.rs  program.rs  renderer_error.rs  shader.rs
src/ui/: application.rs  event_observer.rs  input_handler.rs  mod.rs  properties_window.rs  property.rs  state_instructions.rs  window.rs
